<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- zxing -->
    <string name="zxing_button_ok" translatable="false">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_format">Format</string>
    <string name="zxing_msg_default_meta">Metadata</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="zxing_msg_default_time">Time</string>
    <string name="zxing_msg_default_type">Type</string>
    <string name="zxing_msg_error">Error</string>
    <string name="zxing_msg_invalid_value">Invalid value</string>

    <string name="zxing_preferences_actions_title">When a barcode is found\u2026</string>
    <string name="zxing_preferences_auto_focus_title">Use auto focus</string>
    <string name="zxing_preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="zxing_preferences_decode_1D_product_title">1D Product</string>
    <string name="zxing_preferences_decode_Aztec_title" translatable="false">Aztec</string>
    <string name="zxing_preferences_decode_Data_Matrix_title" translatable="false">Data Matrix</string>
    <string name="zxing_preferences_decode_PDF417_title" translatable="false">PDF417 (β)</string>
    <string name="zxing_preferences_decode_QR_title">QR Codes</string>
    <string name="zxing_preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="zxing_preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="zxing_preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="zxing_preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="zxing_preferences_disable_exposure_title">No exposure</string>
    <string name="zxing_preferences_disable_metering_title">No metering</string>
    <string name="zxing_preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="zxing_preferences_front_light_title">Use front light</string>
    <string name="zxing_preferences_front_light_auto">Automatic</string>
    <string name="zxing_preferences_front_light_off">Off</string>
    <string name="zxing_preferences_front_light_on">On</string>
    <string name="zxing_preferences_general_title">General settings</string>
    <string name="zxing_preferences_invert_scan_title">Invert scan</string>
    <string name="zxing_preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="zxing_preferences_orientation_title">No automatic rotation</string>
    <string name="zxing_preferences_play_beep_title">Beep</string>
    <string name="zxing_preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="zxing_preferences_vibrate_title">Vibrate</string>

    <string name="caption_setting_scan">Barcode scanner</string>
    <string name="preferences_packet_mode_title">Batch mode scan</string>
    <string name="preferences_packet_scan_type_increment">Autoincrement quantity by 1 (+1)</string>
    <string name="preferences_packet_scan_type_set_quantity">Set quantity manually</string>
    <string name="preferences_packet_scan_type">After each scan</string>

    <string name="preferences_scan_type">Scan with</string>
    <string name="preferences_scan_type_title">Barcode scanner type </string>
    <string name="preferences_scan_camera">Camera (ZXing)</string>
    <string name="preferences_scan_camera_vision">Camera (Mobile Vision)</string>
    <string name="preferences_scan_external">External scanner</string>
    <string name="preferences_scan_last_symbol_title">Suffix (end symbol)</string>
    <string name="preferences_scan_last_symbol_enter">Enter</string>
    <string name="preferences_scan_last_symbol_tab">Tab</string>
    <string name="caption_external_scan_description">"This is an experimental feature. \n\n
        Help us to debug and improve it.\n\n
        Please, let us know if it works for you or not. Using \'Question or suggestion\' menu item to send feedback."</string>

    <string name="caption_external_scan">Use External Scanner</string>
    <string name="preferences_scan_last_symbol_space">Space</string>
    <string name="preferences_external_scan_params">Scan parameters</string>

    <string name="vision_msg_default_status">Place a barcode inside the viewfinder rectangle</string>
    <string name="preferences_scan_vertical_camera">Camera (ZXing v.2 - New!)</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_title_barcode_reticle_width">Barcode viewfinder width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_title_barcode_reticle_height">Barcode viewfinder height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_title_scan_delay_time">Scan delay (seconds)</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the viewfinder width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_summary_scan_delay_time">Delay time between 2 consequent scans when scanning to documents in batch mode</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="pref_category_camera">Camera</string>

    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_key_scan_delay_time" translatable="false">barcode_delay_time_perf</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>

    <string name="caption_ok">OK</string>

    <string name="mlkit_preferences_code_128_product_title" translatable="false">Code 128</string>
    <string name="mlkit_preferences_codabar_product_title" translatable="false">Codabar</string>
    <string name="mlkit_preferences_code_39_product_title" translatable="false">Code 39</string>
    <string name="mlkit_preferences_code_93_product_title" translatable="false">Code 93</string>
    <string name="mlkit_preferences_ean_13_product_title" translatable="false">EAN-13</string>
    <string name="mlkit_preferences_ean_8_product_title" translatable="false">EAN-8</string>
    <string name="mlkit_preferences_itf_product_title" translatable="false">ITF</string>
    <string name="mlkit_preferences_upc_a_product_title" translatable="false">UPC-A</string>
    <string name="mlkit_preferences_upc_e_product_title" translatable="false">UPC-E</string>

    <string name="preferences_scan_mlkit">Camera (MLKit)</string>
    <string name="preferences_use_external_mode1">Mode 1</string>
    <string name="preferences_use_external_mode2">Mode 2</string>
    <string name="preferences_use_external_log">Diagnostic mode</string>
    <string name="caption_scan_log" translatable="false">Scan log</string>
</resources>
