<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preferences_packet_mode_title">
    <ListPreference
        android:key="preferences_packet_scan_type_int"
        android:defaultValue="0"
        android:entries="@array/preferences_scan_types"
        android:entryValues="@array/preferences_scan_types_int"
        android:title="@string/preferences_packet_scan_type"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/zxing_preferences_scanning_title">
    <CheckBoxPreference
        android:key="preferences_decode_1D_product"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_decode_1D_product_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_1D_industrial"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_decode_1D_industrial_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_QR"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_decode_QR_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_Data_Matrix"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_decode_Data_Matrix_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_Aztec"
        android:defaultValue="false"
        android:title="@string/zxing_preferences_decode_Aztec_title"/>
    <CheckBoxPreference
        android:key="preferences_decode_PDF417"
        android:defaultValue="false"
        android:title="@string/zxing_preferences_decode_PDF417_title"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/zxing_preferences_actions_title">
    <CheckBoxPreference
        android:key="preferences_play_beep"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_play_beep_title"/>
    <CheckBoxPreference
        android:key="preferences_vibrate"
        android:defaultValue="false"
        android:title="@string/zxing_preferences_vibrate_title"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/zxing_preferences_general_title">
    <ListPreference
        android:entries="@array/preferences_front_light_options"
        android:entryValues="@array/preferences_front_light_values"
        android:key="preferences_front_light_mode"
        android:defaultValue="OFF"
        android:title="@string/zxing_preferences_front_light_title"
        android:summary="@string/zxing_preferences_front_light_summary"/>
    <CheckBoxPreference
        android:key="preferences_auto_focus"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_auto_focus_title"/>
    <CheckBoxPreference
        android:key="preferences_invert_scan"
        android:defaultValue="false"
        android:title="@string/zxing_preferences_invert_scan_title"
        android:summary="@string/zxing_preferences_invert_scan_summary"/>
    <CheckBoxPreference
        android:key="preferences_orientation"
        android:defaultValue="false"
        android:title="@string/zxing_preferences_orientation_title"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/zxing_preferences_device_bug_workarounds_title">
    <CheckBoxPreference
        android:key="preferences_disable_continuous_focus"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_disable_continuous_focus_title"
        android:summary="@string/zxing_preferences_disable_continuous_focus_summary"/>
    <CheckBoxPreference
        android:key="preferences_disable_exposure"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_disable_exposure_title"/>
    <CheckBoxPreference
        android:key="preferences_disable_metering"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_disable_metering_title"/>
    <CheckBoxPreference
        android:key="preferences_disable_barcode_scene_mode"
        android:defaultValue="true"
        android:title="@string/zxing_preferences_disable_barcode_scene_mode_title"/>
  </PreferenceCategory>
</PreferenceScreen>
