<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="preferences_scan_type_category"
        android:title="@string/preferences_scan_type"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="2"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_scan_source_types"
            android:entryValues="@array/preferences_scan_source_types_int"
            android:key="preferences_scan_type_int"
            android:title="@string/preferences_scan_type_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_packet_mode_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_scan_types"
            android:entryValues="@array/preferences_scan_types_int"
            android:key="preferences_packet_scan_type_int"
            android:title="@string/preferences_packet_scan_type" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/zxing_preferences_actions_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            android:key="preferences_play_beep"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_play_beep_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            android:key="preferences_vibrate"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_vibrate_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/zxing_preferences_general_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="OFF"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_front_light_vision_options"
            android:entryValues="@array/preferences_front_light_vision_values"
            android:key="preferences_front_light_vision_mode"
            android:summary="@string/zxing_preferences_front_light_summary"
            android:title="@string/zxing_preferences_front_light_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_camera"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:key="@string/pref_key_rear_camera_preview_size"
            android:persistent="true"
            app:iconSpaceReserved="false"
            android:title="@string/pref_title_rear_camera_preview_size" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_barcode_detection"
        app:iconSpaceReserved="false">
        <SeekBarPreference
            android:defaultValue="80"
            android:key="@string/pref_key_barcode_reticle_width"
            android:max="95"
            android:icon="@null"
            app:iconSpaceReserved="false"
            android:persistent="true"
            android:summary="@string/pref_summary_barcode_reticle_width"
            android:title="@string/pref_title_barcode_reticle_width"
            app:min="50"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            android:defaultValue="35"
            android:key="@string/pref_key_barcode_reticle_height"
            android:max="80"
            android:icon="@null"
            app:iconSpaceReserved="false"
            android:persistent="true"
            android:summary="@string/pref_summary_barcode_reticle_height"
            android:title="@string/pref_title_barcode_reticle_height"
            app:min="20"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            android:defaultValue="50"
            android:key="@string/pref_key_minimum_barcode_width"
            android:max="80"
            android:icon="@null"
            app:iconSpaceReserved="false"
            android:persistent="true"
            android:summary="@string/pref_summary_minimum_barcode_width"
            android:title="@string/pref_title_minimum_barcode_width"
            app:min="20"
            app:showSeekBarValue="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_enable_barcode_size_check"
            android:persistent="true"
            android:summary="@string/pref_summary_enable_barcode_size_check"
            android:title="@string/pref_title_enable_barcode_size_check" />
    </PreferenceCategory>
</PreferenceScreen>
