<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/preferences_scan_type"
        android:key="preferences_scan_type_category"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="2"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_scan_source_types"
            android:entryValues="@array/preferences_scan_source_types_int"
            android:key="preferences_scan_type_int"
            android:title="@string/preferences_scan_type_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/preferences_packet_mode_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_scan_types"
            android:entryValues="@array/preferences_scan_types_int"
            android:key="preferences_packet_scan_type_int"
            android:title="@string/preferences_packet_scan_type" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_scanning_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_1D_product"
            android:title="@string/zxing_preferences_decode_1D_product_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_1D_industrial"
            android:title="@string/zxing_preferences_decode_1D_industrial_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_QR"
            android:title="@string/zxing_preferences_decode_QR_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_Data_Matrix"
            android:title="@string/zxing_preferences_decode_Data_Matrix_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_Aztec"
            android:title="@string/zxing_preferences_decode_Aztec_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_PDF417"
            android:title="@string/zxing_preferences_decode_PDF417_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_actions_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="preferences_play_beep"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_play_beep_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            android:key="preferences_vibrate"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_vibrate_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_general_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="OFF"
            android:entries="@array/preferences_front_light_options"
            android:entryValues="@array/preferences_front_light_values"
            android:key="preferences_front_light_mode"
            app:iconSpaceReserved="false"
            android:summary="@string/zxing_preferences_front_light_summary"
            android:title="@string/zxing_preferences_front_light_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            android:key="preferences_auto_focus"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_auto_focus_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            android:key="preferences_invert_scan"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:summary="@string/zxing_preferences_invert_scan_summary"
            android:title="@string/zxing_preferences_invert_scan_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            android:key="preferences_orientation"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_orientation_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_device_bug_workarounds_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            android:key="preferences_disable_continuous_focus"
            android:layout="@layout/switch_preference"
            app:iconSpaceReserved="false"
            android:summary="@string/zxing_preferences_disable_continuous_focus_summary"
            android:title="@string/zxing_preferences_disable_continuous_focus_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="preferences_disable_exposure"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_disable_exposure_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="preferences_disable_metering"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_disable_metering_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_disable_barcode_scene_mode"
            android:title="@string/zxing_preferences_disable_barcode_scene_mode_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
</PreferenceScreen>
