<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/preferences_scan_type"
        android:key="preferences_scan_type_category"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="2"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_scan_source_types"
            android:entryValues="@array/preferences_scan_source_types_int"
            android:key="preferences_scan_type_int"
            android:title="@string/preferences_scan_type_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/preferences_packet_mode_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineListPreference
            android:defaultValue="0"
            app:iconSpaceReserved="false"
            android:entries="@array/preferences_scan_types"
            android:entryValues="@array/preferences_scan_types_int"
            android:key="preferences_packet_scan_type_int"
            android:title="@string/preferences_packet_scan_type" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_general_title"
        app:iconSpaceReserved="false">
        <SeekBarPreference
            android:defaultValue="0"
            android:key="@string/pref_key_scan_delay_time"
            android:max="10"
            android:icon="@null"
            app:iconSpaceReserved="false"
            android:persistent="true"
            android:summary="@string/pref_summary_scan_delay_time"
            android:title="@string/pref_title_scan_delay_time"
            app:min="0"
            app:showSeekBarValue="true" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_scanning_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_1D_product"
            android:title="@string/zxing_preferences_decode_1D_product_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_1D_industrial"
            android:title="@string/zxing_preferences_decode_1D_industrial_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_QR"
            android:title="@string/zxing_preferences_decode_QR_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_Data_Matrix"
            android:title="@string/zxing_preferences_decode_Data_Matrix_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_Aztec"
            android:title="@string/zxing_preferences_decode_Aztec_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            android:layout="@layout/switch_preference"
            android:key="preferences_decode_PDF417"
            android:title="@string/zxing_preferences_decode_PDF417_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
    <com.tiromansev.scanbarcode.views.ThemedPreferenceCategory
        android:title="@string/zxing_preferences_actions_title"
        app:iconSpaceReserved="false">
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="preferences_play_beep"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_play_beep_title" />
        <com.tiromansev.scanbarcode.views.MultilineCheckboxPreference
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            android:key="preferences_vibrate"
            android:layout="@layout/switch_preference"
            android:title="@string/zxing_preferences_vibrate_title" />
    </com.tiromansev.scanbarcode.views.ThemedPreferenceCategory>
</PreferenceScreen>
